Replace commons-io FileUtils/IOUtils with standard JVM APIs